# faker-ph

./: .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: generate_samples.py  gold_spans.jsonl  rendered_samples.jsonl
src/faker_ph/: __init__.py  faker.py  templates.py
src/faker_ph/data/: landline_area_codes.json  mobile_prefixes.json  ph_names.json
tests/: test_faker_ph.py
