[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faker-ph"
version = "0.1.0"
description = "Philippine-specific synthetic PII generator (PhilSys, TIN, SSS, PhilHealth, PSGC-backed addresses, origin-stratified names)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Daniel Roxas", email = "danielquillanr@gmail.com" },
]
keywords = [
    "philippines",
    "filipino",
    "tagalog",
    "pii",
    "synthetic-data",
    "anonymization",
    "faker",
    "psgc",
    "nlp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: English",
]
dependencies = [
    "faker>=20.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/danielquillanroxas/faker-ph"
Repository = "https://github.com/danielquillanroxas/faker-ph"
Issues = "https://github.com/danielquillanroxas/faker-ph/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/faker_ph"]

[tool.hatch.build.targets.wheel.force-include]
"src/faker_ph/data" = "faker_ph/data"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
